feat: Scaffold the DB

--- a/src/Web/Shared/MainLayout.razor
+++ b/src/Web/Shared/MainLayout.razor
@@ -29,6 +29,11 @@
         </RadzenStack>
         <RadzenPanelMenu>
             <RadzenPanelMenuItem Text="Home" Path="" />
+            <RadzenPanelMenuItem Text="Authors" Path="authors" />
+            <RadzenPanelMenuItem Text="BookAuthors" Path="book-authors" />
+            <RadzenPanelMenuItem Text="BookGenres" Path="book-genres" />
+            <RadzenPanelMenuItem Text="Books" Path="books" />
+            <RadzenPanelMenuItem Text="Genres" Path="genres" />
         </RadzenPanelMenu>
         <RadzenStack AlignItems="Radzen.AlignItems.Center" Gap="0" class="rz-py-4 rz-py-lg-6" Style="padding: var(--rz-panel-menu-item-padding);">
             <RadzenText Text="Lilibre.Web v1.0.0" TextStyle="Radzen.Blazor.TextStyle.Caption" style="color: var(--rz-text-disabled-color);" TagName="Radzen.Blazor.TagName.P" TextAlign="Radzen.TextAlign.Center" />
