refactor: Move models

--- a/src/Web/Web/Pages/AddAuthor.razor
+++ b/src/Web/Web/Pages/AddAuthor.razor
@@ -3,7 +3,7 @@
 <PageTitle>Add Author</PageTitle>
     <RadzenColumn SizeMD=12>
         <RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Danger" Visible="@errorVisible">Cannot save Author</RadzenAlert>
-        <RadzenTemplateForm TItem="Lilibre.Web.Models.Data.Author" Data="@author" Visible="@(author != null)" Submit="@FormSubmit">
+        <RadzenTemplateForm TItem="Author" Data="@author" Visible="@(author != null)" Submit="@FormSubmit">
           <RadzenStack>
             <RadzenFormField Text="Name" Variant="Variant.Filled">
                   <ChildContent>
