--- a/src/Web/Web/Pages/AddBook.razor
+++ b/src/Web/Web/Pages/AddBook.razor
@@ -3,7 +3,7 @@
 <PageTitle>Add Book</PageTitle>
     <RadzenColumn SizeMD=12>
         <RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Danger" Visible="@errorVisible">Cannot save Book</RadzenAlert>
-        <RadzenTemplateForm TItem="Lilibre.Web.Models.Data.Book" Data="@book" Visible="@(book != null)" Submit="@FormSubmit">
+        <RadzenTemplateForm TItem="Book" Data="@book" Visible="@(book != null)" Submit="@FormSubmit">
           <RadzenStack>
             <RadzenFormField Text="Title" Variant="Variant.Filled">
                   <ChildContent>
