--- a/src/Web/Web/Pages/BookGenres.razor
+++ b/src/Web/Web/Pages/BookGenres.razor
@@ -15,13 +15,13 @@
     <RadzenRow>
       <RadzenColumn SizeMD=12>
         <RadzenDataGrid @ref="grid0" ColumnWidth="200px"  AllowFiltering="true" FilterMode="FilterMode.Advanced" AllowPaging="true" AllowSorting="true" ShowPagingSummary="true" PageSizeOptions=@(new int[]{5, 10, 20, 30})
-            Data="@bookGenres" TItem="Lilibre.Web.Models.Data.BookGenre" RowSelect="@EditRow">
+            Data="@bookGenres" TItem="BookGenre" RowSelect="@EditRow">
             <Columns>
-                <RadzenDataGridColumn TItem="Lilibre.Web.Models.Data.BookGenre" Property="Book.Title" Title="Book">
+                <RadzenDataGridColumn TItem="BookGenre" Property="Book.Title" Title="Book">
                 </RadzenDataGridColumn>
-                <RadzenDataGridColumn TItem="Lilibre.Web.Models.Data.BookGenre" Property="Genre.Name" Title="Genre">
+                <RadzenDataGridColumn TItem="BookGenre" Property="Genre.Name" Title="Genre">
                 </RadzenDataGridColumn>
-                <RadzenDataGridColumn TItem="Lilibre.Web.Models.Data.BookGenre" Filterable="false" Sortable="false" Width="70px" TextAlign="TextAlign.Center">
+                <RadzenDataGridColumn TItem="BookGenre" Filterable="false" Sortable="false" Width="70px" TextAlign="TextAlign.Center">
                     <Template Context="bookGenre">
 
                         <RadzenButton ButtonStyle="ButtonStyle.Danger" Icon="delete" Size="ButtonSize.Medium"
