feat: Update word spelling

--- a/src/Web/Web/Shared/MainLayout.razor
+++ b/src/Web/Web/Shared/MainLayout.razor
@@ -25,18 +25,18 @@
     <RadzenSidebar Expanded="@sidebarExpanded" style="z-index: 2">
         <RadzenStack AlignItems="AlignItems.Center" class="rz-py-4 rz-py-lg-6" Style="padding: var(--rz-panel-menu-item-padding); border-bottom: var(--rz-panel-menu-item-border);">
             <RadzenImage Path="images/logo.png" style="width: 48px; height: 48px;"></RadzenImage>
-            <RadzenText Text="Lilibre.Web" TextStyle="TextStyle.Subtitle1" class="rz-mb-0" style="color: var(--rz-sidebar-color);"/>
+            <RadzenText Text="Lilibre" TextStyle="TextStyle.Subtitle1" class="rz-mb-0" style="color: var(--rz-sidebar-color);"/>
         </RadzenStack>
         <RadzenPanelMenu>
             <RadzenPanelMenuItem Text="Home" Path=""/>
             <RadzenPanelMenuItem Text="Authors" Path="authors"/>
-            <RadzenPanelMenuItem Text="BookAuthors" Path="book-authors"/>
-            <RadzenPanelMenuItem Text="BookGenres" Path="book-genres"/>
+            <RadzenPanelMenuItem Text="Book Authors" Path="book-authors"/>
+            <RadzenPanelMenuItem Text="Book Genres" Path="book-genres"/>
             <RadzenPanelMenuItem Text="Books" Path="books"/>
             <RadzenPanelMenuItem Text="Genres" Path="genres"/>
         </RadzenPanelMenu>
         <RadzenStack AlignItems="AlignItems.Center" Gap="0" class="rz-py-4 rz-py-lg-6" Style="padding: var(--rz-panel-menu-item-padding);">
-            <RadzenText Text="Lilibre.Web v1.0.0" TextStyle="TextStyle.Caption" style="color: var(--rz-text-disabled-color);" TagName="TagName.P" TextAlign="TextAlign.Center"/>
+            <RadzenText Text="Lilibre Web v1.0.0" TextStyle="TextStyle.Caption" style="color: var(--rz-text-disabled-color);" TagName="TagName.P" TextAlign="TextAlign.Center"/>
             <RadzenText Text="Copyright Ⓒ 2023" TextStyle="TextStyle.Caption" class="rz-mb-0" style="color: var(--rz-text-disabled-color);" TagName="TagName.P" TextAlign="TextAlign.Center"/>
         </RadzenStack>
     </RadzenSidebar>
