--- a/src/Web/Web/Pages/Index.razor
+++ b/src/Web/Web/Pages/Index.razor
@@ -2,29 +2,9 @@
 <PageTitle>Index</PageTitle>
 <RadzenRow Gap="5" RowGap="5">
     <RadzenColumn Size="12">
-        <RadzenText Text="Welcome to your new app" TextStyle="TextStyle.DisplayH2" TagName="TagName.Auto"></RadzenText>
-        <RadzenText Text="Your Success Is Our Biggest Priority" TextStyle="TextStyle.H4" TagName="TagName.H2" class="mt-5"></RadzenText>
-        <RadzenText Text="With Radzen Blazor Studio, application development is just one-click away." TextStyle="TextStyle.Body1" TagName="TagName.Auto" class="mt-4" Style="font-size: 20px; line-height: 24px"></RadzenText>
-        <RadzenText Text="Simple to setup, maintain and update." TextStyle="TextStyle.Body1" TagName="TagName.Auto" class="mt-3" Style="font-size: 20px; line-height: 24px"></RadzenText>
-        <RadzenCard Style="margin-top: 40px; padding: 20px 40px 40px;">
-            <RadzenRow>
-                <RadzenColumn Size="12" SizeMD="4">
-                    <RadzenIcon Icon="smart_button" Style="margin-top: 20px; width: 48px; height: 48px; font-size: 48px; color: var(--rz-text-title-color);"></RadzenIcon>
-                    <RadzenText Text="Learn the Fundamentals" TextStyle="TextStyle.DisplayH6" TagName="TagName.H3"></RadzenText>
-                    <RadzenLink Text="Docs" Path="https://www.radzen.com/blazor-studio/documentation/" Icon="east" Target="_blank" Style="font-size: 18px"></RadzenLink>
-                    <RadzenLink Text="Videos" Path="https://youtube.com/playlist?list=PLQyJPeb3xHcBij_RbHD__2TOo8Jv5HQVc" Icon="east" Target="_blank" Style="display: block; font-size: 18px"></RadzenLink>
-                </RadzenColumn>
-                <RadzenColumn Size="12" SizeMD="4">
-                    <RadzenIcon Icon="code" Style="margin-top: 20px; width: 48px; height: 48px; font-size: 48px; color: var(--rz-text-title-color);"></RadzenIcon>
-                    <RadzenText Text="Radzen Blazor Components" TextStyle="TextStyle.DisplayH6" TagName="TagName.H3"></RadzenText>
-                    <RadzenLink Text="Demos" Path="https://blazor.radzen.com" Icon="east" Target="_blank" Style="font-size: 18px"></RadzenLink>
-                </RadzenColumn>
-                <RadzenColumn Size="12" SizeMD="4">
-                    <RadzenIcon Icon="people_outline" Style="margin-top: 20px; width: 48px; height: 48px; font-size: 48px; color: var(--rz-text-title-color);"></RadzenIcon>
-                    <RadzenText Text="Radzen Community" TextStyle="TextStyle.DisplayH6" TagName="TagName.H3"></RadzenText>
-                    <RadzenLink Text="Radzen Blazor Studio Forums" Path="https://forum.radzen.com/c/radzen-blazor-studio/12" Icon="east" Target="_blank" Style="font-size: 18px"></RadzenLink>
-                </RadzenColumn>
-            </RadzenRow>
-        </RadzenCard>
+        <RadzenText Text="Welcome to Lilibre" TextStyle="TextStyle.DisplayH2" TagName="TagName.Auto"></RadzenText>
+        <RadzenText Text="Empowering Your Library Managment" TextStyle="TextStyle.H4" TagName="TagName.H2" class="mt-5"></RadzenText>
+        <RadzenText Text="With Lilibre, managing your library is simplified and efficient." TextStyle="TextStyle.Body1" TagName="TagName.Auto" class="mt-4" Style="font-size: 20px; line-height: 24px"></RadzenText>
+        <RadzenText Text="Simplify cataloging, lending, and managing books effortlessly." TextStyle="TextStyle.Body1" TagName="TagName.Auto" class="mt-4" Style="font-size: 20px; line-height: 24px"></RadzenText>
     </RadzenColumn>
 </RadzenRow>
