--- a/src/Web/web/src/app/authors/components/author-list/author-list.component.html
+++ b/src/Web/web/src/app/authors/components/author-list/author-list.component.html
@@ -1,1 +1,8 @@
-<p>author-list works!</p>
+<h2>Authors List</h2>
+<ul>
+  <li *ngFor="let author of authors">
+    <span>{{ author.name }}</span>
+    <button (click)="viewAuthorDetails(author.id)">Details</button>
+    <button (click)="deleteAuthor(author.id)">Delete</button>
+  </li>
+</ul>
