--- a/src/Web/web/src/app/authors/components/author-update/author-update.component.html
+++ b/src/Web/web/src/app/authors/components/author-update/author-update.component.html
@@ -1,1 +1,13 @@
-<p>author-update works!</p>
+<h2>Update Author</h2>
+<form (submit)="updateAuthor()">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" [(ngModel)]="author.name" required><br>
+  
+  <label for="description">Description:</label>
+  <textarea id="description" name="description" [(ngModel)]="author.description" required></textarea><br>
+  
+  <label for="birthYear">Birth Year:</label>
+  <input type="number" id="birthYear" name="birthYear" [(ngModel)]="author.birthYear" required><br>
+  
+  <button type="submit">Update</button>
+</form>
