feat: add update using

--- a/src/Web/web/src/app/authors/components/author-details/author-details.component.html
+++ b/src/Web/web/src/app/authors/components/author-details/author-details.component.html
@@ -3,4 +3,5 @@
   <p>Name: {{ author.name }}</p>
   <p>Description: {{ author.description }}</p>
   <p>Birth Year: {{ author.birthYear }}</p>
+  <button (click)="editAuthor(author.id)">Edit</button>
 </div>
