--- a/src/Web/web/src/app/authors/components/author-create/author-create.component.html
+++ b/src/Web/web/src/app/authors/components/author-create/author-create.component.html
@@ -1,13 +1,15 @@
-<h2>Create New Author</h2>
-<form (submit)="createAuthor()">
-  <label for="name">Name:</label>
-  <input type="text" id="name" name="name" [(ngModel)]="author.name" required><br>
-  
-  <label for="description">Description:</label>
-  <textarea id="description" name="description" [(ngModel)]="author.description" required></textarea><br>
-  
-  <label for="birthYear">Birth Year:</label>
-  <input type="number" id="birthYear" name="birthYear" [(ngModel)]="author.birthYear" required><br>
-  
-  <button type="submit">Create</button>
-</form>
+<div class="create-author">
+  <h2>Create New Author</h2>
+  <form (submit)="createAuthor()" class="author-form">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" [(ngModel)]="author.name" required><br>
+    
+    <label for="description">Description:</label>
+    <textarea id="description" name="description" [(ngModel)]="author.description" required></textarea><br>
+    
+    <label for="birthYear">Birth Year:</label>
+    <input type="number" id="birthYear" name="birthYear" [(ngModel)]="author.birthYear" required><br>
+    
+    <button type="submit" class="btn-create">Create</button>
+  </form>
+</div>
