--- a/src/Web/web/src/app/authors/components/author-list/author-list.component.html
+++ b/src/Web/web/src/app/authors/components/author-list/author-list.component.html
@@ -11,4 +11,9 @@
       <button (click)="deleteAuthor(author.id)" class="btn-delete">Delete</button>
     </div>
   </div>
+  <div class="author-card">
+    <div class="author-create">
+      <a routerLink="/create" class="btn-create">Create</a>
+    </div>
+  </div>
 </div>
