feat: add validation

--- a/src/Web/web/src/app/authors/components/author-create/author-create.component.css
+++ b/src/Web/web/src/app/authors/components/author-create/author-create.component.css
@@ -38,4 +38,10 @@
   .btn-create:hover {
     background-color: darken(#2ecc71, 10%);
   }
+
+  .create-author .author-form div {
+    color: red;
+    margin-top: 5px;
+    font-size: 0.9em;
+  }
   
